hphp/test/slow/await_as_an_expression/error/binop7.php.expectf

Fatal error: Await cannot be used as an expression in this location because it's conditionally executed. in %s/binop7.php on line 15
